--- a/index.html
+++ b/index.html
@@ -12,6 +12,51 @@
 </head>
 
 <body>
+  <!-- This is navber part start -->
+  <nav class="mx-10 mb-5">
+    <div class="navbar bg-base-100">
+      <div class="navbar-start">
+        <div class="dropdown">
+          <label tabindex="0" class="btn btn-ghost lg:hidden">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
+          </label>
+          <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+            <li><a>Item 1</a></li>
+            <li>
+              <a>Parent</a>
+              <ul class="p-2">
+                <li><a>Submenu 1</a></li>
+                <li><a>Submenu 2</a></li>
+              </ul>
+            </li>
+            <li><a>Item 3</a></li>
+          </ul>
+        </div>
+        <a class="btn btn-ghost normal-case text-xl">daisyUI</a>
+      </div>
+      <div class="navbar-center hidden lg:flex">
+        <ul class="menu menu-horizontal px-1">
+          <li><a>Item 1</a></li>
+          <li tabindex="0">
+            <details>
+              <summary>Parent</summary>
+              <ul class="p-2">
+                <li><a>Submenu 1</a></li>
+                <li><a>Submenu 2</a></li>
+              </ul>
+            </details>
+          </li>
+          <li><a>Item 3</a></li>
+        </ul>
+      </div>
+      <div class="navbar-end flex gap-5">
+        <a class="p-2 rounded-lg cursor-pointer bg-[#E527B2] text-white">Login</a>
+        <a class="p-2 rounded-lg cursor-pointer bg-[#E527B2] text-white">SignUp</a>
+      </div>
+    </div>
+  </nav>
+  <!-- This is navber part end -->
+
     <!-- this is header part -->
     <header class="mb-8 lg:h-screen">
         <section class="flex flex-col-reverse lg:flex-row justify-between text-center items-center bg-[#F9F6E2]">
