--- a/index.html
+++ b/index.html
@@ -6,52 +6,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Summer sale</title>
     <link rel="shortcut icon" href="./images/Summer 1.png" type="image/x-icon">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="style.css">
     <!-- daisy and tailwind cdn link -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.5.1/dist/full.css" rel="stylesheet" type="text/css" />
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
+
 </head>
 
 <body>
   <!-- This is navber part start -->
-  <nav class="mx-10 mb-5">
-    <div class="navbar bg-base-100">
-      <div class="navbar-start">
-        <div class="dropdown">
-          <label tabindex="0" class="btn btn-ghost lg:hidden">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
+  <nav class="px-10 pb-5 bg-[#F9F6E2]">
+    <div class="navbar ">
+      <div class="flex-1 hidden lg:inline">
+        <a class=" btn cursor-pointer font-bold  normal-case text-3xl ">SUMMER SALE</a>
+      </div>
+      <div class="flex-none gap-2">
+        <nav class="text-black p-4">
+          <ul class="flex space-x-4">
+              <li class="nav-item"><a href="#">Home</a></li>
+              <li class="nav-item"><a href="#">About</a></li>
+              <li class="nav-item"><a href="#">Services</a></li>
+              <li class="nav-item"><a href="#">Contact</a></li>
+          </ul>
+      </nav>
+        <div class="form-control">
+          <input type="text" placeholder="Search" class="input input-bordered w-24 md:w-auto" />
+        </div>
+        <div class="dropdown dropdown-end">
+          <label tabindex="0" class="btn btn-ghost btn-circle avatar">
+            <div class="w-10 rounded-full">
+              <img src="./images/Summer 1.png" />
+            </div>
           </label>
-          <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
-            <li><a>Item 1</a></li>
+          <ul tabindex="0" class="mt-3 z-[1] p-2 shadow menu menu-sm dropdown-content bg-base-100 rounded-box w-52">
             <li>
-              <a>Parent</a>
-              <ul class="p-2">
-                <li><a>Submenu 1</a></li>
-                <li><a>Submenu 2</a></li>
-              </ul>
+              <a class="justify-between">
+                Profile
+                <span class="badge">New</span>
+              </a>
             </li>
-            <li><a>Item 3</a></li>
+            <li><a>Settings</a></li>
+            <li><a>Logout</a></li>
           </ul>
         </div>
-        <a class="btn btn-ghost normal-case text-xl">daisyUI</a>
-      </div>
-      <div class="navbar-center hidden lg:flex">
-        <ul class="menu menu-horizontal px-1">
-          <li><a>Item 1</a></li>
-          <li tabindex="0">
-            <details>
-              <summary>Parent</summary>
-              <ul class="p-2">
-                <li><a>Submenu 1</a></li>
-                <li><a>Submenu 2</a></li>
-              </ul>
-            </details>
-          </li>
-          <li><a>Item 3</a></li>
-        </ul>
-      </div>
-      <div class="navbar-end flex gap-5">
-        <a class="p-2 rounded-lg cursor-pointer bg-[#E527B2] text-white">Login</a>
-        <a class="p-2 rounded-lg cursor-pointer bg-[#E527B2] text-white">SignUp</a>
       </div>
     </div>
   </nav>
